[package]
name = "vips-sys"
version = "0.1.3-beta.0"
authors = ["elbaro <elbaro@github>"]
edition = "2018"
description = "libvips bindings for Rust"
documentation = "https://elbaro.github.io/vips-sys/vips_sys/"
repository = "https://github.com/elbaro/vips-sys"
readme = "README.md"
keywords = ["vips", "image", "libvips"]
categories = ["multimedia::images", "external-ffi-bindings"]
license = "MIT"
links = "vips"

[features]
static = []
dynamic = []
vips_8_74 = []

[build-dependencies]
pkg-config = "0.3.11"
bindgen = "0.49.0"
failure = "0.1.5"

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = { version = "0.2.6" }
